# BDL

./: .gitignore  README.md  tutorial_00_physical_cluster_setup.md  tutorial_00_physical_clustersetup_and_sd_card_preparation.md  tutorial_01_clustersetup_and_ssh_with_mac_workstation.md  tutorial_01_clustersetup_and_ssh_with_ubuntu_workstation.md  tutorial_01_clustersetup_and_ssh_with_windows_workstation.md  tutorial_01_mac_connection_to_pi_cluster.md  tutorial_01_mac_internet_sharing.md  tutorial_01_ubuntu_connection_to_pi_cluster.md  tutorial_01_ubuntu_internet_sharing.md  tutorial_01_windows_connection_to_pi_cluster.md  tutorial_01_windows_internet_sharing.md  tutorial_02_adding_pi_os_to_sd_cards.md  tutorial_02_cluster_network.md  tutorial_02_cluster_passwordless_ssh_and_environment_variables.md  tutorial_02_hadoop.md  tutorial_03_hadoop_dependencies.md  tutorial_03_hadoop_installation.md  tutorial_03_hadoop_settings.md  tutorial_03_hadoop_word_count_example.md  tutorial_04_monitoring_install_prometheus.md  tutorial_04_monitoring_visual_dashboard_setup.md  tutorial_06_spark_cluster_setup.md  tutorial_06_spark_pyspark_setup.md  tutorial_06_spark_pyspark_word_count_example.md
ansible/: .gitignore  Justfile  README.md  inventory.yml  pyproject.toml
ansible/playbook/: apt.yml  hadoop_config.yml  java_hadoop.yml  monitoring.yml  nfs.yml  rollback.yml
ansible/roles/grafana/tasks/: main.yml
ansible/roles/hadoop/files/: core-site.xml  hdfs-site.xml  yarn-site.xml
ansible/roles/hadoop/tasks/: main.yml
ansible/roles/hadoop/templates/: mapred-site.xml.j2
(+88 files in other folders)
